testing/macro-tests/tests/ui/generated_requires_ulid.stderr
error: generated(insert = "Ulid::generate") requires a primitive Ulid field
  --> tests/ui/generated_requires_ulid.rs:28:21
   |
28 |             ident = "name",
   |                     ^^^^^^
